# polyquery

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
src/polyquery/: __init__.py  __metadata__.py
tests/: __init__.py
tests/test_apps/: litestar.py
